--- a/global.css
+++ b/global.css
@@ -2,6 +2,13 @@ body {
     background-color: brown;
     margin: 0;
     font-family: sans-serif;
+    @media screen and (max-width: 768px) {
+  .card p {
+    max-height: 55px;
+    overflow: hidden;
+  }
+}
+
 }
 
 header, footer{
