--- a/global.css
+++ b/global.css
@@ -42,3 +42,11 @@ a{
     }
     .text
 }
+body{
+    margin: 0;
+    padding: 0;
+    background: url(https://m.media-amazon.com/images/M/MV5BMTBiODBjYTEtNTM1Yy00OTE2LWFhM2MtMmU3NmZlZjdlYjg5XkEyXkFqcGc@._V1_QL75_UX389_.jpg);
+    background-size: cover;
+    font-family: 'Quicksand', sans-serif;
+    background-position: center;
+}
